syntax="proto3";
option java_package = "rs.lab.rpcdemo.protobuf";

import "CustomerOrder.proto";

message Delivery {
    CustomerOrder Order = 1;
    string Type = 2;
}

service Deliveries {
    rpc NewDelivery (NewDeliveryRequest) returns (NewDeliveryResponse);
}

message NewDeliveryRequest {
    CustomerOrder Order = 1;
}

message NewDeliveryResponse {
    bool Success = 1;
    string Error = 2;
}
